--- a/index.html
+++ b/index.html
@@ -437,8 +437,12 @@
             Post Comment
           </button>
         </form>
-
         <h6 class="mt-3">Comments:</h6>
+        <span class="fav-com"
+          ><strong>Misba:</strong> Excellent👌 Creative work😁<i
+            class="fa-solid fa-map-pin"
+          ></i
+        ></span>
         <div id="commentsSection"></div>
       </div>
     </div>
